--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,167 @@
-.App {
+
+.logo{
+    display: flex;
+}
+.logo img{
+    width:220px;
+    margin-left: 36px;
+    margin-top: 20px;
+}
+.nav a  {
+    text-decoration: none;
+    padding-top:10px;
+    padding: 10px;
+    
+}
+.nav{
+  padding:20px;
+  margin-top: 30px;
+  margin-left: 110px;
+
+  
+}
+.slide {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.slide img{
+  margin-top: 5px;
+  width:100%;
+  height: 500px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.about{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.about-us{
+  width:100%;
+}
+.aboutimg {
+    width:45%;
+    height: 400px;
+}
+.paragraph{
+  width:50%;
+  margin-left:35px;
+  height: 400px;
+}
+.mainfooter{
+  background-color:rgb(13, 1, 1);
+  width:100%;
+  height: 300px;
+  opacity: 0.5;
+  color:white;
 }
 
-.App-link {
-  color: #61dafb;
+table{
+  margin-left: 50px;
+  margin-top: 20px;
+}
+tr   td{
+  padding: 5px 20px;
+}
+.footer{
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right{
+  background-color: rgb(14, 9, 9);
+  width:200px;
+  height: 170px;
+  border:1px solid rgb(40, 39, 39);
+  margin-right:20px;
+  margin-top: 30px;
+  border-bottom-right-radius: 40px;
+  border-top-left-radius:60px ;
 }
+.right p{
+  font-size: 13px;
+  margin-left: 40px;
+}
+.right p span{
+  color:rgb(0, 139, 16);
+}
+.lastparagraph{
+  margin-left: 60px;
+  margin-top: 63px;
+  font-size: 14px;
+
+
+}
+ .project1{
+  display: flex;
+  justify-content: space-between;
+}
+.project1 .image{
+      width:70%
+}
+.project1 .heading{
+  width:30%;
+  text-align: center;
+  margin-top: 40px;
+}
+.project1 .image img{
+  width:900px;
+  height: 500px;
+}
+
+.project2 .image{
+  width:70%
+}
+.project2 .heading{
+width:30%;
+text-align: center;
+margin-top: 40px;
+margin-left: 30px;
+}
+
+.project2{
+  display: flex;
+  justify-content: space-between;
+}
+.project2 .image img{
+  width: 900px;
+  height: 500px;
+
+}
+.icons{
+  float: right;
+  margin-right: 80px;
+  margin-top: 20px;
+}
+.icons i{
+  width:53px;
+}
+.projectlist{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  
+}
+.project img{
+  width:400px;
+  height: 350px;
+}
+.project p{
+  text-align: center;
+}
+.projectgallery{
+  background-color:#1b8ddf;
+  color:rgb(189 36 21 / 98%);
+  text-align: center;
+}
+.nav a:hover{
+  border-bottom: 3px solid red;
+  font-size: 120%;
+}
+@media only screen and (max-width: 600px) {
+  .about{display: block;
+  }
+  .aboutimg img{
+    width:auto;
+  }
+  .paragraph{
+    width:600px;}
+    .footer{
+      display: block;
+    }
+
+  }
